--- a/index.html
+++ b/index.html
@@ -2,9 +2,27 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Login | </title>
+    <title>Login | Instaclone</title>
   </head>
   <body>
+    <main id="login">
+      <div class="login__column">
+        <img src="images/phoneImage.png" class="login__phoneImage"/>
+      </div>
+      <div class="login__cloumn">
+        <div class="login__box">
+          <img src="images/logo.png" class="login__logo"/>
+        </div>
+        <div class="login__box">
+        </div>
+        <div class="login__box login__box--transparent">
+
+        </div>
+      </div>
+    </main>
+
+    <footer>
+    </footer>
 
   </body>
 </html>
