--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
           <img src="images/logo.png" class="login__logo"/>
         </div>
         <div class="login__box">
+          <span class="login__text">Don't have an account?</span>
+          <a href="#">Sign up</a>
         </div>
-        <div class="login__box login__box--transparent">
-
+        <div class="login__box login__box--transparent"/>
+          <span class="login__text">Get the app.</span>
+          <div class="login__appstores" />
+            <img src="images/ios.png" class="login__appstore" />
+            <img src="images/android.png" class="login__appstore" />
+          </div>
         </div>
       </div>
     </main>
