--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
       <div class="login__cloumn">
         <div class="login__box">
           <img src="images/logo.png" class="login__logo"/>
+          <form class="login__form" />
+            <input type="text" placeholder="User name" />
+            <div class="login__form-box">
+              <input type="password" placeholder="Password" />
+              <a href="#">Forgot?</a>
+            </div>
+              <input type="submit" value="Log in" />
+          </form>
         </div>
         <div class="login__box">
           <span class="login__text">Don't have an account?</span>
