--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
       <div class="login__cloumn">
         <div class="login__box">
           <img src="images/logo.png" class="login__logo"/>
-          <form class="login__form" />
-            <input type="text" placeholder="User name" />
+          <form action="feed.html" method="post" class="login__form" />
+            <input name="username" type="text" placeholder="User name" />
             <div class="login__form-box">
-              <input type="password" placeholder="Password" />
+              <input name="password" type="password" placeholder="Password" />
               <a href="#">Forgot?</a>
             </div>
-              <input type="submit" value="Log in" />
+            <input type="submit" value="Log In" />
           </form>
         </div>
         <div class="login__box">
