--- a/feed.html
+++ b/feed.html
@@ -2,9 +2,47 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Feed</title>
+    <title>Feed | Instaclone</title>
   </head>
   <body>
-hello
+    <main>
+    </main>
+    <footer>
+      <nav class="footer__nav">
+        <ul class="footer__list">
+          <li class="footer__item">
+            <a href="#" class="footer__link">ABOUT US</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" class="footer__link">SUPPORT</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" class="footer__link">BLOG</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" class="footer__link">PRESS</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" class="footer__link">API</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" class="footer__link">JOBS</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" class="footer__link">PRIVACY</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" class="footer__link">TERMS</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" class="footer__link">DIRECTORY</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" class="footer__link">LANGUAGE</a>
+          </li>
+        </ul>
+      </nav>
+       <span class="footer__copyright">© 2017 instagram</span>
+    </footer>
   </body>
 </html>
