--- a/index.html
+++ b/index.html
@@ -3,23 +3,54 @@
   <head>
     <meta charset="utf-8">
     <title>Login | Instaclone</title>
+    <link rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <main id="login">
       <div class="login__column">
-        <img src="images/phoneImage.png" class="login__phoneImage"/>
+        <img
+        src="images/phoneImage.png"
+        class="login__phoneImage"
+        />
       </div>
       <div class="login__cloumn">
         <div class="login__box">
-          <img src="images/logo.png" class="login__logo"/>
-          <form action="feed.html" method="post" class="login__form" />
-            <input name="username" type="text" placeholder="User name" />
+          <img
+          src="images/logo.png"
+          class="login__logo"
+          />
+          <form
+          action="feed.html"
+          method="post"
+          class="login__form"
+          />
+            <input
+            name="username"
+            type="text"
+            placeholder="User name"
+            required
+            />
             <div class="login__form-box">
-              <input name="password" type="password" placeholder="Password" />
+              <input
+              name="password"
+              type="password"
+              placeholder="Password"
+              required
+              />
               <a href="#">Forgot?</a>
             </div>
-            <input type="submit" value="Log In" />
+            <input
+            type="submit"
+            value="Log In"
+            />
           </form>
+          <span class="login__divider">or</span>
+          <a href="#" class="login__fb-link">
+            <i class="fa fa-facebook-square" aria-hidden="true"></i>
+            <span class="login__text">Log in with Facebook</span>
+          </a>
         </div>
         <div class="login__box">
           <span class="login__text">Don't have an account?</span>
@@ -36,6 +67,41 @@
     </main>
 
     <footer>
+      <nav class="footer__nav">
+        <ul class="footer__list">
+          <li class="footer__item">
+            <a href="#" class="footer__link">ABOUT US</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" class="footer__link">SUPPORT</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" class="footer__link">BLOG</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" class="footer__link">PRESS</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" class="footer__link">API</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" class="footer__link">JOBS</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" class="footer__link">PRIVACY</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" class="footer__link">TERMS</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" class="footer__link">DIRECTORY</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" class="footer__link">LANGUAGE</a>
+          </li>
+        </ul>
+      </nav>
+       <span class="footer__copyright">© 2017 instagram</span>
     </footer>
 
   </body>
