--- a/feed.html
+++ b/feed.html
@@ -8,7 +8,38 @@
     />
   </head>
   <body>
+<nav class="feed-nav">
+  <div class="feed-nav__column">
+    <a href="#">
+      <img src="images/navlogo.png" class="feed__logo">
+    </a>
+  </div>
+  <div class="nav__column">
+    <form class="text" action="#" method="get">
+      <i class="fa fa-search" aria-hidden="true"></i>
+      <input type="text" placeholder="Search">
+    </form>
+  </div>
+  <div class="nav__column">
+    <div class="nav__item">
+      <a href="#">
+        <i class="fa fa-compass" aria-hidden="true"></i>
+      </a>
+    </div>
+    <div class="nav__item">
+      <a href="#">
+        <i class="fa fa-heart-o" aria-hidden="true"></i>
+      </a>
+    </div>
+    <div class="nav__item">
+      <a href="#">
+        <i class="fa fa-user-o" aria-hidden="true"></i>
+      </a>
+    </div>
+  </div>
+</nav>
     <main>
+
     </main>
     <footer>
       <nav class="footer__nav">
