--- a/feed.html
+++ b/feed.html
@@ -8,34 +8,26 @@
     />
   </head>
   <body>
-<nav class="feed-nav">
-  <div class="feed-nav__column">
-    <a href="#">
-      <img src="images/navlogo.png" class="feed__logo">
+<nav class="navigation">
+    <a href="feed.html">
+      <img src="images/navlogo.png" class="navigation__logo">
     </a>
-  </div>
-  <div class="nav__column">
-    <form class="text" action="#" method="get">
+  <div class="navigation__search">
+    <form class="navigation__text" action="#" method="get">
       <i class="fa fa-search" aria-hidden="true"></i>
       <input type="text" placeholder="Search">
     </form>
   </div>
-  <div class="nav__column">
-    <div class="nav__item">
-      <a href="#">
+  <div class="navigation__icons">
+      <a href="explore.html" class="navigation__link">
         <i class="fa fa-compass" aria-hidden="true"></i>
       </a>
-    </div>
-    <div class="nav__item">
-      <a href="#">
+      <a href="#" class="navigation__link">
         <i class="fa fa-heart-o" aria-hidden="true"></i>
       </a>
-    </div>
-    <div class="nav__item">
-      <a href="#">
+      <a href="profile.html" class="navigation__link">
         <i class="fa fa-user-o" aria-hidden="true"></i>
       </a>
-    </div>
   </div>
 </nav>
     <main>
