--- a/explore.html
+++ b/explore.html
@@ -8,8 +8,53 @@
     />
   </head>
   <body>
-    <main>
-    </main>
+    <nav class="navigation">
+        <a href="feed.html">
+          <img src="images/navlogo.png" class="navigation__logo">
+        </a>
+      <div class="navigation__search">
+        <form class="navigation__text" action="#" method="get">
+          <i class="fa fa-search" aria-hidden="true"></i>
+          <input type="text" placeholder="Search">
+        </form>
+      </div>
+      <div class="navigation__icons">
+          <a href="explore.html" class="navigation__link">
+            <i class="fa fa-compass" aria-hidden="true"></i>
+          </a>
+          <a href="#" class="navigation__link">
+            <i class="fa fa-heart-o" aria-hidden="true"></i>
+          </a>
+          <a href="profile.html" class="navigation__link">
+            <i class="fa fa-user-o" aria-hidden="true"></i>
+          </a>
+      </div>
+    </nav>
+    <main class="explore">
+     <ul class="explore__users">
+       <li class="explore__user">
+         <div class="explore__column">
+           <img src="images/avatar.jpg" class="explore__avatar">
+           <div class="explore__usernames">
+             <span class="explore__username">adel</span>
+             <span class="explore__user-fullname">adelaide.cha</span>
+           </div>
+         </div>
+         <div class="explore__column">
+           <button value="Follow"></button>
+         </div>
+       <!--
+         1) Create two columns (A div and a button)
+         2) Create an image (avatar.jpg) inside of the first column
+         3) Create a div next to the image
+         4) Create two spans (username and full name) inside the div next
+           to the image.
+         5) Create a <button></button> in the last column
+               -->
+
+       </li>
+     </ul>
+   </main>
     <footer>
       <nav class="footer__nav">
         <ul class="footer__list">
