--- a/profile.html
+++ b/profile.html
@@ -8,6 +8,29 @@
     />
   </head>
   <body>
+    <nav class="navigation">
+        <a href="feed.html">
+          <img src="images/navlogo.png" class="navigation__logo">
+        </a>
+      <div class="navigation__search">
+        <form class="navigation__text" action="#" method="get">
+          <i class="fa fa-search" aria-hidden="true"></i>
+          <input type="text" placeholder="Search">
+        </form>
+      </div>
+      <div class="navigation__icons">
+          <a href="explore.html" class="navigation__link">
+            <i class="fa fa-compass" aria-hidden="true"></i>
+          </a>
+          <a href="#" class="navigation__link">
+            <i class="fa fa-heart-o" aria-hidden="true"></i>
+          </a>
+          <a href="profile.html" class="navigation__link">
+            <i class="fa fa-user-o" aria-hidden="true"></i>
+          </a>
+      </div>
+    </nav>
+
     <main>
 
     </main>
