--- a/explore.html
+++ b/explore.html
@@ -33,25 +33,14 @@
     <main class="explore">
      <ul class="explore__users">
        <li class="explore__user">
-         <div class="explore__column">
+         <div class="explore__user-info">
            <img src="images/avatar.jpg" class="explore__avatar">
-           <div class="explore__usernames">
+           <div class="explore__name">
              <span class="explore__username">adel</span>
-             <span class="explore__user-fullname">adelaide.cha</span>
+             <span class="explore__fullname">adelaide.cha</span>
            </div>
          </div>
-         <div class="explore__column">
-           <button value="Follow"></button>
-         </div>
-       <!--
-         1) Create two columns (A div and a button)
-         2) Create an image (avatar.jpg) inside of the first column
-         3) Create a div next to the image
-         4) Create two spans (username and full name) inside the div next
-           to the image.
-         5) Create a <button></button> in the last column
-               -->
-
+          <button>Follow</button>
        </li>
      </ul>
    </main>
