--- a/profile.html
+++ b/profile.html
@@ -30,10 +30,41 @@
           </a>
       </div>
     </nav>
-
-    <main>
-
-    </main>
+  <main class="profile">
+    <header class="profile__header">
+    <img src="images/avatar.jpg" class="profile__avatar">
+    <div class="profile__user-info">
+      <div class="profile__names">
+        <h3 class="profile__username">adel.cha</h3>
+        <a href="" class="profile__edit-btn">
+          <button>Edit Profile</button>
+        </a>
+        <span class="profile__icon">
+          <i class="fa fa-cog" aria-hidden="true"></i>
+        </span>
+      </div>
+      <ul class="profile__counts">
+        <li class="profile__posts">
+          <span class="profile__number">245</span>posts
+        </li>
+        <li class="profile__followers">
+          <span class="profile__number">2,435</span>followers
+        </li>
+        <li class="profile__following">
+          <span class="profile__number">4,625</span>following
+        </li>
+      </ul>
+      <div class="profile__p">
+        <p>
+          <span class="profile__fullname">adelaide.cha</span>
+          hello, Everyone! kkk. I'm in jeju. Traveling now. I'm not good at english.
+          Please visit my website. I made it! <span class="profile__website">google.com</span>
+          Yes, I'm liar. haha.
+        </p>
+      </div>
+    </div>
+    </header>
+  </main>
     <footer>
       <nav class="footer__nav">
         <ul class="footer__list">
