--- a/profile.html
+++ b/profile.html
@@ -36,9 +36,9 @@
         <img src="images/avatar.jpg" class="profile__avatar">
       </div>
       <div class="profile__user-info">
-        <div class="profile__names">
+        <div class="profile__name">
         <h3 class="profile__username">adel.cha</h3>
-        <a href="" class="profile__edit-btn">
+        <a href="edit-profile.html" class="profile__edit-btn">
           <button>Edit Profile</button>
         </a>
         <span class="profile__icon">
@@ -46,20 +46,20 @@
         </span>
       </div>
         <ul class="profile__counts">
-        <li class="profile__posts">
-          <span class="profile__number">245</span>posts
+        <li class="profile__stat">
+          <span class="profile__number">245</span> posts
         </li>
-        <li class="profile__followers">
-          <span class="profile__number">2,435</span>followers
+        <li class="profile__stat">
+          <span class="profile__number">2,435</span> followers
         </li>
-        <li class="profile__following">
-          <span class="profile__number">4,625</span>following
+        <li class="profile__stat">
+          <span class="profile__number">4,625</span> following
         </li>
       </ul>
-        <p class="profile__p">
-          <span class="profile__fullname">adelaide.cha</span>
+        <p class="profile__bio">
+          <span class="profile__full-name">adelaide.cha</span>
           hello, Everyone! kkk. I'm in jeju. Traveling now. I'm not good at english.
-          Please visit my website. I made it! <span class="profile__website">google.com</span>
+          Please visit my website. I made it! <a href="google.com">google.com</a>
           Yes, I'm liar. haha.
         </p>
       </div>
