--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           />
           <form
           action="feed.html"
-          method="post"
+          method="get"
           class="login__form"
           />
             <input
