--- a/profile.html
+++ b/profile.html
@@ -37,7 +37,7 @@
       </div>
       <div class="profile__user-info">
         <div class="profile__name">
-        <h3 class="profile__username">adel.cha</h3>
+        <h3 class="profile__username">adelaide.cha</h3>
         <a href="edit-profile.html" class="profile__edit-btn">
           <button>Edit Profile</button>
         </a>
