--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,7 @@
   <body>
     <nav class="navigation">
         <a href="feed.html">
-          <img src="images/navlogo.png" class="navigation__logo">
+          <img src="images/navLogo.png" class="navigation__logo">
         </a>
       <div class="navigation__search">
         <form class="navigation__text" action="#" method="get">
