--- a/profile.html
+++ b/profile.html
@@ -64,6 +64,23 @@
         </p>
       </div>
     </header>
+    <section class="profile__photos">
+      <div class="profile__photo-row">
+        <div class="profile__photo">
+          <img src="images/feedPhoto.jpg">
+          <div class="profile__photo-overlay">
+            <div class="profile__photo-stat">
+              <i class="fa fa-heart"></i>
+              <span class="profile__number">246</span>
+            </div>
+            <div class="profile__photo-stat">
+              <i class="fa fa-comment"></i>
+              <span class="profile__number">46</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
     <footer>
       <nav class="footer__nav">
