--- a/edit-profile.html
+++ b/edit-profile.html
@@ -38,34 +38,34 @@
       <nav class="footer__nav">
         <ul class="footer__list">
           <li class="footer__item">
-            <a href="#" class="footer__link">ABOUT US</a>
+            <a href="#" class="footer__link">about us</a>
           </li>
           <li class="footer__item">
-            <a href="#" class="footer__link">SUPPORT</a>
+            <a href="#" class="footer__link">support</a>
           </li>
           <li class="footer__item">
-            <a href="#" class="footer__link">BLOG</a>
+            <a href="#" class="footer__link">blog</a>
           </li>
           <li class="footer__item">
-            <a href="#" class="footer__link">PRESS</a>
+            <a href="#" class="footer__link">press</a>
           </li>
           <li class="footer__item">
-            <a href="#" class="footer__link">API</a>
+            <a href="#" class="footer__link">api</a>
           </li>
           <li class="footer__item">
-            <a href="#" class="footer__link">JOBS</a>
+            <a href="#" class="footer__link">jobs</a>
           </li>
           <li class="footer__item">
-            <a href="#" class="footer__link">PRIVACY</a>
+            <a href="#" class="footer__link">privacy</a>
           </li>
           <li class="footer__item">
-            <a href="#" class="footer__link">TERMS</a>
+            <a href="#" class="footer__link">terms</a>
           </li>
           <li class="footer__item">
-            <a href="#" class="footer__link">DIRECTORY</a>
+            <a href="#" class="footer__link">directory</a>
           </li>
           <li class="footer__item">
-            <a href="#" class="footer__link">LANGUAGE</a>
+            <a href="#" class="footer__link">language</a>
           </li>
         </ul>
       </nav>
