--- a/edit-profile.html
+++ b/edit-profile.html
@@ -30,10 +30,31 @@
           </a>
       </div>
     </nav>
-
-    <main>
-
-    </main>
+    <main class="edit-profile">
+        <header class="edit-profile__header">
+          <img src="images/avatar.jpg">
+          <h3 class="edit-profile__title">adelaide.cha</h3>
+        </header>
+        <form class="form">
+          <div class="form__row">
+            <label for="name" class="form__name">Name</label>
+            <input id="name" type="text">
+          </div>
+          <div class="form__row">
+            <label for="username" class="form__name">Username</label>
+            <input id="username" type="text">
+          </div>
+          <div class="form__row">
+            <label for="website" class="form__name">Website</label>
+            <input id="website" type="text">
+          </div>
+          <div class="form__row">
+            <label for="bio" class="form__name">Bio</label>
+            <textarea id="bio">
+          </div>
+          <!-- Add all the other inputs with the labels -->
+        </form>
+      </main>
     <footer>
       <nav class="footer__nav">
         <ul class="footer__list">
