--- a/edit-profile.html
+++ b/edit-profile.html
@@ -51,7 +51,28 @@
           </div>
           <div class="form__row">
             <label for="bio" class="form__name">Bio</label>
-            <textarea id="bio">
+            <textarea id="bio"></textarea>
+          </div>
+          <span class="form__index">private information</span>
+          <div class="form__row">
+            <label for="email" class="form__name">Email</label>
+            <input id="email" type="email">
+          </div>
+          <div class="form__row">
+            <label for="phone-number" class="form__name">Phone Number</label>
+            <input id="phone-number" type="email">
+          </div>
+          <div class="form__row">
+            <label for="gender" class="form__name">Gender</label>
+            <select id="gender" name=""></select>
+          </div>
+          <div class="form__row">
+            <label for="suggestion" class="form__name">Similar Account Suggestions</label>
+            <input id="suggestion" type="checkbox">
+          </div>
+          <div class="form__submit">
+            <input type="submit" value="Submit">
+            <a href="#">Temporarily disable my account</a>
           </div>
           <!-- Add all the other inputs with the labels -->
         </form>
