edit option more

--- a/edit-profile.html
+++ b/edit-profile.html
@@ -64,7 +64,8 @@
           </div>
           <div class="form__row">
             <label for="gender" class="form__name">Gender</label>
-            <select id="gender" name="">
+            <select id="gender">
+              <option value="none">none select</option>
               <option value="male">Male</option>
               <option value="female">Female</option>
             </select>
