--- a/edit-profile.html
+++ b/edit-profile.html
@@ -65,9 +65,9 @@
           <div class="form__row">
             <label for="gender" class="form__name">Gender</label>
             <select id="gender">
-              <option value="none">None selected</option>
               <option value="male">Male</option>
               <option value="female">Female</option>
+              <option value="none">I don't know</option>
             </select>
           </div>
           <div class="form__row">
