--- a/feed.html
+++ b/feed.html
@@ -7,7 +7,7 @@
     href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
   </head>
-  <link rel="stylesheet" href="/css/master.css">
+  <link rel="stylesheet" href="/css/styles.css">
   <body>
     <nav class="navigation">
         <a href="feed.html">
