--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="/css/master.css">
+    <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
     <nav class="navigation">
