--- a/feed.html
+++ b/feed.html
@@ -1,104 +1,105 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Feed | Instaclone</title>
-    <link rel="stylesheet"
-    href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-  </head>
-  <link rel="stylesheet" href="/css/styles.css">
-  <body>
-    <nav class="navigation">
-        <a href="feed.html">
+
+<head>
+  <meta charset="utf-8">
+  <title>Feed | Instaclone</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+</head>
+<link rel="stylesheet" href="/css/styles.css">
+
+<body>
+  <nav class="navigation">
+    <a href="feed.html">
           <img src="images/navLogo.png" class="navigation__logo">
         </a>
-      <div class="navigation__search">
-        <form class="navigation__text" action="#" method="get">
-          <i class="fa fa-search" aria-hidden="true"></i>
-          <input type="text" placeholder="Search">
-        </form>
-      </div>
-      <div class="navigation__icons">
-          <a href="explore.html" class="navigation__link">
+    <div class="navigation__search">
+      <form class="navigation__text" action="#" method="get">
+        <i class="fa fa-search" aria-hidden="true"></i>
+        <input type="text" placeholder="Search">
+      </form>
+    </div>
+    <div class="navigation__icons">
+      <a href="explore.html" class="navigation__link">
             <i class="fa fa-compass" aria-hidden="true"></i>
           </a>
-          <a href="#" class="navigation__link">
+      <a href="#" class="navigation__link">
             <i class="fa fa-heart-o" aria-hidden="true"></i>
           </a>
-          <a href="profile.html" class="navigation__link">
+      <a href="profile.html" class="navigation__link">
             <i class="fa fa-user-o" aria-hidden="true"></i>
           </a>
-      </div>
-    </nav>
-    <main class="feed">
-      <article class="photo">
-        <header class="photo__header">
-          <img src="images/avatar.jpg" class="photo__avartar">
-          <span class="photo__username">adelaide.cha</span>
-        </header>
-        <img src="images/feedPhoto.jpg" class="photo__image">
-        <div class="photo__info">
-          <div class="photo__action">
-            <span class="photo__icon-container">
+    </div>
+  </nav>
+  <main class="feed">
+    <article class="photo">
+      <header class="photo__header">
+        <img src="images/avatar.jpg" class="photo__avartar">
+        <span class="photo__username">adelaide.cha</span>
+      </header>
+      <img src="images/feedPhoto.jpg" class="photo__image">
+      <div class="photo__info">
+        <div class="photo__action">
+          <span class="photo__icon-container">
               <i class="fa fa-heart-o fa-lg"></i>
             </span>
-            <span class="photo__icon-container">
+          <span class="photo__icon-container">
               <i class="fa fa-comment-o fa-lg"></i>
             </span>
-          </div>
-          <span class="photo__like">3,145 likes</span>
-          <div class="photo__comments">
-            <ul class="photo__comment">
-              <li class="photo__comment">
-                <span class="photo__comment-author">helloworld</span> wow, awesome!!
-              </li>
-            </ul>
-          </div>
-          <span class="photo__date">7 hours ago</span>
-          <div class="photo__add-comment">
-            <textarea placeholder="Add a comment..."></textarea>
-            <i class="fa fa-ellipsis-h"></i>
-          </div>
         </div>
-      </article>
-    </main>
-    <footer>
-      <nav class="footer__nav">
-        <ul class="footer__list">
-          <li class="footer__item">
-            <a href="#" class="footer__link">about us</a>
-          </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">support</a>
-          </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">blog</a>
-          </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">press</a>
-          </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">api</a>
-          </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">jobs</a>
-          </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">privacy</a>
-          </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">terms</a>
-          </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">directory</a>
-          </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">language</a>
-          </li>
-        </ul>
-      </nav>
-       <span class="footer__copyright">© 2017 instagram</span>
-    </footer>
-  </body>
+        <span class="photo__like">3,145 likes</span>
+        <div class="photo__comments">
+          <ul class="photo__comment">
+            <li class="photo__comment">
+              <span class="photo__comment-author">helloworld</span> wow, awesome!!
+            </li>
+          </ul>
+        </div>
+        <span class="photo__date">7 hours ago</span>
+        <div class="photo__add-comment">
+          <textarea placeholder="Add a comment..."></textarea>
+          <i class="fa fa-ellipsis-h"></i>
+        </div>
+      </div>
+    </article>
+  </main>
+  <footer>
+    <nav class="footer__nav">
+      <ul class="footer__list">
+        <li class="footer__item">
+          <a href="#" class="footer__link">about us</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">support</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">blog</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">press</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">api</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">jobs</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">privacy</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">terms</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">directory</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">language</a>
+        </li>
+      </ul>
+    </nav>
+    <span class="footer__copyright">© 2017 instagram</span>
+  </footer>
+</body>
+
 </html>
