--- a/profile.html
+++ b/profile.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Profile | Instaclone</title>
-    <link rel="stylesheet"
-    href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link rel="stylesheet" href="/css/styles.css">
-  </head>
-  <body>
-    <nav class="navigation">
-        <a href="feed.html">
+
+<head>
+  <meta charset="utf-8">
+  <title>Profile | Instaclone</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="/css/styles.css">
+</head>
+
+<body>
+  <nav class="navigation">
+    <a href="feed.html">
           <img src="images/navLogo.png" class="navigation__logo">
         </a>
-      <div class="navigation__search">
-        <form class="navigation__text" action="#" method="get">
-          <i class="fa fa-search" aria-hidden="true"></i>
-          <input type="text" placeholder="Search">
-        </form>
-      </div>
-      <div class="navigation__icons">
-          <a href="explore.html" class="navigation__link">
+    <div class="navigation__search">
+      <form class="navigation__text" action="#" method="get">
+        <i class="fa fa-search" aria-hidden="true"></i>
+        <input type="text" placeholder="Search">
+      </form>
+    </div>
+    <div class="navigation__icons">
+      <a href="explore.html" class="navigation__link">
             <i class="fa fa-compass" aria-hidden="true"></i>
           </a>
-          <a href="#" class="navigation__link">
+      <a href="#" class="navigation__link">
             <i class="fa fa-heart-o" aria-hidden="true"></i>
           </a>
-          <a href="profile.html" class="navigation__link">
+      <a href="profile.html" class="navigation__link">
             <i class="fa fa-user-o" aria-hidden="true"></i>
           </a>
-      </div>
-    </nav>
+    </div>
+  </nav>
   <main class="profile">
     <header class="profile__header">
       <div class="profile__user-image">
@@ -38,30 +38,27 @@
       </div>
       <div class="profile__user-info">
         <div class="profile__name">
-        <h3 class="profile__username">adelaide.cha</h3>
-        <a href="edit-profile.html" class="profile__edit-btn">
+          <h3 class="profile__username">adelaide.cha</h3>
+          <a href="edit-profile.html" class="profile__edit-btn">
           <button>Edit Profile</button>
         </a>
-        <span class="profile__icon">
+          <span class="profile__icon">
           <i class="fa fa-cog" aria-hidden="true"></i>
         </span>
-      </div>
+        </div>
         <ul class="profile__counts">
-        <li class="profile__stat">
-          <span class="profile__number">245</span> posts
-        </li>
-        <li class="profile__stat">
-          <span class="profile__number">2,435</span> followers
-        </li>
-        <li class="profile__stat">
-          <span class="profile__number">4,625</span> following
-        </li>
-      </ul>
+          <li class="profile__stat">
+            <span class="profile__number">245</span> posts
+          </li>
+          <li class="profile__stat">
+            <span class="profile__number">2,435</span> followers
+          </li>
+          <li class="profile__stat">
+            <span class="profile__number">4,625</span> following
+          </li>
+        </ul>
         <p class="profile__bio">
-          <span class="profile__full-name">adelaide.cha</span>
-          hello, Everyone! kkk. I'm in jeju. Traveling now. I'm not good at english.
-          Please visit my website. I made it! <a href="google.com">google.com</a>
-          Yes, I'm liar. haha.
+          <span class="profile__full-name">adelaide.cha</span> hello, Everyone! kkk. I'm in jeju. Traveling now. I'm not good at english. Please visit my website. I made it! <a href="google.com">google.com</a> Yes, I'm liar. haha.
         </p>
       </div>
     </header>
@@ -83,42 +80,43 @@
       </div>
     </section>
   </main>
-    <footer>
-      <nav class="footer__nav">
-        <ul class="footer__list">
-          <li class="footer__item">
-            <a href="#" class="footer__link">about us</a>
-          </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">support</a>
-          </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">blog</a>
-          </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">press</a>
-          </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">api</a>
-          </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">jobs</a>
-          </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">privacy</a>
-          </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">terms</a>
-          </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">directory</a>
-          </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">language</a>
-          </li>
-        </ul>
-      </nav>
-       <span class="footer__copyright">© 2017 instagram</span>
-    </footer>
-  </body>
+  <footer>
+    <nav class="footer__nav">
+      <ul class="footer__list">
+        <li class="footer__item">
+          <a href="#" class="footer__link">about us</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">support</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">blog</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">press</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">api</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">jobs</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">privacy</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">terms</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">directory</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">language</a>
+        </li>
+      </ul>
+    </nav>
+    <span class="footer__copyright">© 2017 instagram</span>
+  </footer>
+</body>
+
 </html>
