--- a/edit-profile.html
+++ b/edit-profile.html
@@ -1,123 +1,124 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Edit Profile | Instaclone</title>
-    <link rel="stylesheet"
-    href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link rel="stylesheet" href="/css/styles.css">
-  </head>
-  <body>
-    <nav class="navigation">
-        <a href="feed.html">
+
+<head>
+  <meta charset="utf-8">
+  <title>Edit Profile | Instaclone</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="/css/styles.css">
+</head>
+
+<body>
+  <nav class="navigation">
+    <a href="feed.html">
           <img src="images/navLogo.png" class="navigation__logo">
         </a>
-      <div class="navigation__search">
-        <form class="navigation__text" action="#" method="get">
-          <i class="fa fa-search" aria-hidden="true"></i>
-          <input type="text" placeholder="Search">
-        </form>
-      </div>
-      <div class="navigation__icons">
-          <a href="explore.html" class="navigation__link">
+    <div class="navigation__search">
+      <form class="navigation__text" action="#" method="get">
+        <i class="fa fa-search" aria-hidden="true"></i>
+        <input type="text" placeholder="Search">
+      </form>
+    </div>
+    <div class="navigation__icons">
+      <a href="explore.html" class="navigation__link">
             <i class="fa fa-compass" aria-hidden="true"></i>
           </a>
-          <a href="#" class="navigation__link">
+      <a href="#" class="navigation__link">
             <i class="fa fa-heart-o" aria-hidden="true"></i>
           </a>
-          <a href="profile.html" class="navigation__link">
+      <a href="profile.html" class="navigation__link">
             <i class="fa fa-user-o" aria-hidden="true"></i>
           </a>
-      </div>
-    </nav>
+    </div>
+  </nav>
 
-    <main class="edit-profile">
-        <header class="edit-profile__header">
-          <img src="images/avatar.jpg">
-          <h3 class="edit-profile__title">adelaide.cha</h3>
-        </header>
-        <form class="form">
-          <div class="form__row">
-            <label for="name" class="form__name">Name</label>
-            <input id="name" type="text">
-          </div>
-          <div class="form__row">
-            <label for="username" class="form__name">Username</label>
-            <input id="username" type="text">
-          </div>
-          <div class="form__row">
-            <label for="website" class="form__name">Website</label>
-            <input id="website" type="text">
-          </div>
-          <div class="form__row">
-            <label for="bio" class="form__name">Bio</label>
-            <textarea id="bio"></textarea>
-          </div>
-          <span class="form__index">private information</span>
-          <div class="form__row">
-            <label for="email" class="form__name">Email</label>
-            <input id="email" type="email">
-          </div>
-          <div class="form__row">
-            <label for="phone-number" class="form__name">Phone Number</label>
-            <input id="phone-number" type="email">
-          </div>
-          <div class="form__row">
-            <label for="gender" class="form__name">Gender</label>
-            <select id="gender">
+  <main class="edit-profile">
+    <header class="edit-profile__header">
+      <img src="images/avatar.jpg">
+      <h3 class="edit-profile__title">adelaide.cha</h3>
+    </header>
+    <form class="form">
+      <div class="form__row">
+        <label for="name" class="form__name">Name</label>
+        <input id="name" type="text">
+      </div>
+      <div class="form__row">
+        <label for="username" class="form__name">Username</label>
+        <input id="username" type="text">
+      </div>
+      <div class="form__row">
+        <label for="website" class="form__name">Website</label>
+        <input id="website" type="text">
+      </div>
+      <div class="form__row">
+        <label for="bio" class="form__name">Bio</label>
+        <textarea id="bio"></textarea>
+      </div>
+      <span class="form__index">private information</span>
+      <div class="form__row">
+        <label for="email" class="form__name">Email</label>
+        <input id="email" type="email">
+      </div>
+      <div class="form__row">
+        <label for="phone-number" class="form__name">Phone Number</label>
+        <input id="phone-number" type="email">
+      </div>
+      <div class="form__row">
+        <label for="gender" class="form__name">Gender</label>
+        <select id="gender">
               <option value="male">Male</option>
               <option value="female">Female</option>
               <option value="none">I don't know</option>
             </select>
-          </div>
-          <div class="form__row">
-            <span for="similar" class="form__label">Similar Account Suggestions</span>
-            <input id="similar" type="checkbox">
-            <label for="similar" class="form__outside-label">Include your account when</label>
-          </div>
-          <div class="form__submit">
-            <input type="submit" value="Submit">
-            <a href="#">Temporarily disable my account</a>
-          </div>
-        </form>
-      </main>
-    <footer>
-      <nav class="footer__nav">
-        <ul class="footer__list">
-          <li class="footer__item">
-            <a href="#" class="footer__link">about us</a>
-          </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">support</a>
-          </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">blog</a>
-          </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">press</a>
-          </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">api</a>
-          </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">jobs</a>
-          </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">privacy</a>
-          </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">terms</a>
-          </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">directory</a>
-          </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">language</a>
-          </li>
-        </ul>
-      </nav>
-       <span class="footer__copyright">© 2017 instagram</span>
-    </footer>
-  </body>
+      </div>
+      <div class="form__row">
+        <span for="similar" class="form__label">Similar Account Suggestions</span>
+        <input id="similar" type="checkbox">
+        <label for="similar" class="form__outside-label">Include your account when</label>
+      </div>
+      <div class="form__submit">
+        <input type="submit" value="Submit">
+        <a href="#">Temporarily disable my account</a>
+      </div>
+    </form>
+  </main>
+  <footer>
+    <nav class="footer__nav">
+      <ul class="footer__list">
+        <li class="footer__item">
+          <a href="#" class="footer__link">about us</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">support</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">blog</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">press</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">api</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">jobs</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">privacy</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">terms</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">directory</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">language</a>
+        </li>
+      </ul>
+    </nav>
+    <span class="footer__copyright">© 2017 instagram</span>
+  </footer>
+</body>
+
 </html>
