--- a/explore.html
+++ b/explore.html
@@ -38,7 +38,7 @@
           <img src="images/avatar.jpg" class="explore__avatar">
           <div class="explore__name">
             <span class="explore__username">adel</span>
-            <span class="explore__fullname">adelaide.cha</span>
+            <span class="explore__full-name">adelaide.cha</span>
           </div>
         </div>
         <button>Follow</button>
