--- a/profile.html
+++ b/profile.html
@@ -38,10 +38,9 @@
       </div>
       <div class="profile__user-info">
         <div class="profile__name">
-          <h3 class="profile__username">adel.cha</h3>
-          <a href="edit-profile.html" class="profile__edit-btn">
+          <h3 class="profile__username">adelaide.cha</h3>
           <button>Edit Profile</button>
-        </a>
+          </a>
           <span class="profile__icon">
           <i class="fa fa-cog" aria-hidden="true"></i>
         </span>
