--- a/example.html
+++ b/example.html
@@ -8,32 +8,33 @@
   <title>Document</title>
   <style>
     body {
-      background-color: blue;
+      background-color: rgb(58, 214, 153);
       margin: 0;
     }
 
     .box {
-      background-color: yellow;
-      border: 2px solid black;
-      width: 100px;
-      height: 50px;
-      margin: 200px 100px;
+      background-color: rgb(113, 57, 200);
+      width: 100%;
+      height: 100%;
+      padding: 20px;
     }
 
     .child {
-      background-color: green;
-      margin: 5px 10px;
-      width: 10px;
-      height: 5px;
+      background-color: rgb(81, 0, 138);
+      border: 1px solid white;
+      width: 100px;
+      height: 200px;
+      display: inline-block;
+      margin: 30px;
     }
   </style>
 </head>
 
 <body>
   <div class="box">
-    <div class="child">
-
-    </div>
+    <div class="child"></div>
+    <div class="child"></div>
+    <div class="child"></div>
   </div>
 </body>
 
