--- a/example.html
+++ b/example.html
@@ -7,34 +7,56 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <style>
+    html,
+    body {
+      height: 100%;
+    }
+
     body {
       background-color: rgb(58, 214, 153);
       margin: 0;
     }
 
-    .box {
+    .father {
       background-color: rgb(113, 57, 200);
       width: 100%;
       height: 100%;
-      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content:  ;
+      align-items: center;
     }
 
     .child {
       background-color: rgb(81, 0, 138);
       border: 1px solid white;
-      width: 100px;
+      width: 27%;
       height: 200px;
-      display: inline-block;
-      margin: 30px;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .grandchild {
+      position: fixed;
+      top: 30px;
+      left: 30px;
+      height: 100px;
+      width: 100px;
+      background-color: white;
     }
   </style>
 </head>
 
 <body>
-  <div class="box">
-    <div class="child"></div>
-    <div class="child"></div>
-    <div class="child"></div>
+  <div class="father">
+    <div class="child">
+      <div class="grandchild"></div>
+    </div>
+    <div class="child">1</div>
+    <div class="child">2</div>
+
   </div>
 </body>
 
