--- a/feed.html
+++ b/feed.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Feed | Instaclone</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 
@@ -13,7 +13,7 @@
   <nav class="navigation">
     <a href="feed.html">
           <img src="images/navLogo.png" class="navigation__logo">
-        </a>
+      </a>
     <div class="navigation__search">
       <form class="navigation__text" action="#" method="get">
         <i class="fa fa-search" aria-hidden="true"></i>
