--- a/profile.html
+++ b/profile.html
@@ -77,6 +77,32 @@
             </div>
           </div>
         </div>
+        <div class="profile__photo">
+          <img src="images/feedPhoto.jpg">
+          <div class="profile__photo-overlay">
+            <div class="profile__photo-stat">
+              <i class="fa fa-heart"></i>
+              <span class="profile__number">246</span>
+            </div>
+            <div class="profile__photo-stat">
+              <i class="fa fa-comment"></i>
+              <span class="profile__number">46</span>
+            </div>
+          </div>
+        </div>
+        <div class="profile__photo">
+          <img src="images/feedPhoto.jpg">
+          <div class="profile__photo-overlay">
+            <div class="profile__photo-stat">
+              <i class="fa fa-heart"></i>
+              <span class="profile__number">246</span>
+            </div>
+            <div class="profile__photo-stat">
+              <i class="fa fa-comment"></i>
+              <span class="profile__number">46</span>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </main>
