--- a/edit-profile.html
+++ b/edit-profile.html
@@ -72,7 +72,7 @@
             </select>
       </div>
       <div class="form__row">
-        <span for="similar" class="form__label">Similar Account Suggestions</span>
+        <span for="similar" class="form__name">Similar Account Suggestions</span>
         <input id="similar" type="checkbox">
         <label for="similar" class="form__outside-label">Include your account when</label>
       </div>
