--- a/edit-profile.html
+++ b/edit-profile.html
@@ -34,7 +34,9 @@
 
   <main class="edit-profile">
     <header class="edit-profile__header">
+      <div class="edit-profile__avatar-container">
       <img src="images/avatar.jpg">
+    </div>
       <h3 class="edit-profile__title">adelaide.cha</h3>
     </header>
     <form class="form">
@@ -54,7 +56,9 @@
         <label for="bio" class="form__name">Bio</label>
         <textarea id="bio"></textarea>
       </div>
-      <span class="form__index">private information</span>
+      <div class="form__row">
+        <span class="form__index">private information</span>
+      </div>
       <div class="form__row">
         <label for="email" class="form__name">Email</label>
         <input id="email" type="email">
@@ -76,9 +80,9 @@
         <input id="similar" type="checkbox">
         <label for="similar" class="form__outside-label">Include your account when</label>
       </div>
-      <div class="form__submit">
+      <div class="form__row">
+        <div class="form__name">        </div>
         <input type="submit" value="Submit">
-        <a href="#">Temporarily disable my account</a>
       </div>
     </form>
   </main>
