--- a/example.html
+++ b/example.html
@@ -23,7 +23,7 @@
       height: 100%;
       display: flex;
       flex-direction: column;
-      justify-content:  ;
+      justify-content: ;
       align-items: center;
     }
 
@@ -45,6 +45,32 @@
       height: 100px;
       width: 100px;
       background-color: white;
+      animation: 5s lemon infinite linear;
+    }
+
+    @keyframes lemon {
+      0% {
+        transition: 120%;
+        opacity: 0;
+        transform: translate(100px);
+      }
+      30% {
+        transform: rotate(0);
+        transform: translate(200px);
+      }
+      50% {
+        background-color: red;
+        opacity: 1;
+        transform: translate(100px);
+      }
+      80% {
+        background-color: yellow;
+      }
+      100% {
+        transform: rotate(3turn);
+        opacity: 1;
+        transform: translate(300px);
+      }
     }
   </style>
 </head>
