--- a/feed.html
+++ b/feed.html
@@ -13,7 +13,7 @@
   <nav class="navigation">
     <a href="feed.html">
           <img src="images/navLogo.png" class="navigation__logo">
-      </a>
+        </a>
     <div class="navigation__search">
       <form class="navigation__text" action="#" method="get">
         <i class="fa fa-search" aria-hidden="true"></i>
@@ -21,13 +21,13 @@
       </form>
     </div>
     <div class="navigation__icons">
-      <a href="explore.html" class="navigation__link">
+      <a href="explore.html" class="navigation__link" id="compass">
             <i class="fa fa-compass" aria-hidden="true"></i>
           </a>
-      <a href="#" class="navigation__link">
+      <a href="#" class="navigation__link" id="heart">
             <i class="fa fa-heart-o" aria-hidden="true"></i>
           </a>
-      <a href="profile.html" class="navigation__link">
+      <a href="profile.html" class="navigation__link" id="user">
             <i class="fa fa-user-o" aria-hidden="true"></i>
           </a>
     </div>
@@ -35,19 +35,19 @@
   <main class="feed">
     <article class="photo">
       <header class="photo__header">
-        <img src="images/avatar.jpg" class="photo__avartar">
-        <span class="photo__username">adelaide.cha</span>
-      </header>
+          <img src="images/avatar.jpg" class="photo__avatar" />
+          <span class="photo__username">adel.cha</span>
+        </header>
       <img src="images/feedPhoto.jpg" class="photo__image">
       <div class="photo__info">
-        <div class="photo__action">
-          <span class="photo__icon-container">
-              <i class="fa fa-heart-o fa-lg"></i>
-            </span>
-          <span class="photo__icon-container">
-              <i class="fa fa-comment-o fa-lg"></i>
-            </span>
-        </div>
+        <div class="photo__actions">
+                  <span class="photo__icon-container">
+                    <i class="fa fa-heart-o fa-lg"></i>
+                  </span>
+                  <span class="photo__icon-container">
+                    <i class="fa fa-comment-o fa-lg"></i>
+                  </span>
+                </div>
         <span class="photo__like">3,145 likes</span>
         <div class="photo__comments">
           <ul class="photo__comment">
