--- a/profile.html
+++ b/profile.html
@@ -20,13 +20,13 @@
       </form>
     </div>
     <div class="navigation__icons">
-      <a href="explore.html" class="navigation__link">
+      <a href="explore.html" class="navigation__link" id="compass">
             <i class="fa fa-compass" aria-hidden="true"></i>
           </a>
-      <a href="#" class="navigation__link">
+      <a href="#" class="navigation__link" id="heart">
             <i class="fa fa-heart-o" aria-hidden="true"></i>
           </a>
-      <a href="profile.html" class="navigation__link">
+      <a href="profile.html" class="navigation__link" id="user">
             <i class="fa fa-user-o" aria-hidden="true"></i>
           </a>
     </div>
