--- a/edit-profile.html
+++ b/edit-profile.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Edit Profile | Instaclone</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="css/styles.css">
@@ -123,6 +124,9 @@
     </nav>
     <span class="footer__copyright">© 2017 instagram</span>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js">  </script>
+  <script src="js/app.js">
+  </script>
 </body>
 
 </html>
