--- a/feed.html
+++ b/feed.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Feed | Instaclone</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="css/styles.css">
@@ -42,10 +43,10 @@
       <div class="photo__info">
         <div class="photo__actions">
                   <span class="photo__icon-container">
-                    <i class="fa fa-heart-o fa-lg"></i>
+                    <i class="fa fa-heart-o fa-lg heart"></i>
                   </span>
                   <span class="photo__icon-container">
-                    <i class="fa fa-comment-o fa-lg"></i>
+                    <i class="fa fa-comment-o fa-lg comment"></i>
                   </span>
                 </div>
         <span class="photo__like">3,145 likes</span>
@@ -101,6 +102,11 @@
     </nav>
     <span class="footer__copyright">© 2017 instagram</span>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js">
+
+  </script>
+  <script src="js/app.js">
+  </script>
 </body>
 
 </html>
