--- a/profile.html
+++ b/profile.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Profile | Instaclone</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="css/styles.css">
@@ -34,18 +35,18 @@
   <main class="profile">
     <header class="profile__header">
       <div class="profile__user-image">
-        <img src="images/avatar.jpg" class="profile__avatar">
-      </div>
-      <div class="profile__user-info">
-        <div class="profile__name">
-          <h3 class="profile__username">adelaide.cha</h3>
-          <a href="edit-profile.html" class="profile__edit-btn">
-            <button>Edit Profile</button>
-          </a>
-          <span class="profile__icon">
-          <i class="fa fa-cog" aria-hidden="true"></i>
-        </span>
-        </div>
+       <img src="images/avatar.jpg" class="profile__avatar">
+     </div>
+     <div class="profile__user-info">
+       <div class="profile__name">
+         <h3 class="profile__username">adel.cha</h3>
+         <a href="edit-profile.html" class="profile__edit-btn">
+           <button>Edit Profile</button>
+         </a>
+         <span class="profile__icon">
+           <i class="fa fa-cog" aria-hidden="true"></i>
+         </span>
+     </div>
         <ul class="profile__counts">
           <li class="profile__stat">
             <span class="profile__number">245</span> posts
@@ -143,6 +144,10 @@
     </nav>
     <span class="footer__copyright">© 2017 instagram</span>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js">
+
+  </script>
+<script src="js/app.js">  </script>
 </body>
 
 </html>
