--- a/profile.html
+++ b/profile.html
@@ -144,6 +144,20 @@
     </nav>
     <span class="footer__copyright">© 2017 instagram</span>
   </footer>
+  <div class="profileOverlay">
+      <i class="fa fa-times fa-2x"></i>
+      <div class="profileOverlay-container">
+        <div class="profileOverlay__links">
+        <ul class="profileOverlay__list">
+          <li class="profileOverlay__link"><a href="#">Change Password</a></li>
+          <li class="profileOverlay__link"><a href="#">Authorized Apps</a></li>
+          <li class="profileOverlay__link"><a href="#">Notifications</a></li>
+          <li class="profileOverlay__link"><a href="index.html">Log Out</a></li>
+          <li class="profileOverlay__link" id="cancel"><a href="#">Cancel</a></li>
+        </ul>
+        </div>
+      </div>
+    </div>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js">
 
   </script>
